src/test/deca/lexicographie/invalid/sansObjet/invalid_comment.deca
{
    /* Commentaire pas fermé
    println("Hello bad comment");
}